# mcp-pm

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DEVELOPER_GUIDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TESTING.md  mcp-pm-architecture.html  mcp-pm-hero.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/mcp_pm/: __init__.py  __main__.py  audit.py  cli.py  client.py  config.py  exceptions.py  formula.py  installer.py  registry.py  sandbox.py  server.py  tap.py
src/mcp_pm/cmd/: __init__.py  _audit.py  _autoremove.py  _bump.py  _cleanup.py  _completion.py  _config.py  _create.py  _deps.py  _doctor.py  _explore.py  _helpers.py  _home.py  _info.py  _install.py  _leaves.py  _list.py  _log.py  _outdated.py  _pin.py  _reinstall.py  _run.py  _sandbox.py  _search.py  _serve.py  _services.py  _tap.py  _uninstall.py  _update.py
src/mcp_pm/registry/: __init__.py  base.py  builtin.py  models.py  online.py  tap_backend.py
src/mcp_pm/webui/: __init__.py  app.py  lang.py
src/mcp_pm/webui/templates/: _server_cards.html  _stats_cards.html  base.html  config.html  dashboard.html  install.html  logs.html  servers.html  tool_detail.html
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_exceptions.py  test_formula.py  test_installer.py  test_registry.py  test_sandbox.py  test_server.py  test_tap.py  verify_client_server.py
