[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-pm"
version = "0.1.0"
description = "Homebrew for MCP Servers — A CLI package manager for MCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Davey Wong", email = "wgwcko@gmail.com" },
]
keywords = ["mcp", "model-context-protocol", "cli", "package-manager", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/daveywong/mcp-pm"
Repository = "https://github.com/daveywong/mcp-pm.git"
Documentation = "https://github.com/daveywong/mcp-pm"
Changelog = "https://github.com/daveywong/mcp-pm/blob/main/CHANGELOG.md"
Issues = "https://github.com/daveywong/mcp-pm/issues"

[project.scripts]
mcp = "mcp_pm.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.5",
]

[tool.setuptools.packages.find]
include = ["mcp_pm*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
